--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "next": "^8.0.4",
     "nodemon": "^1.18.10",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "semantic-ui-react": "^0.86.0",
-    "standard": "^12.0.1"
+    "standard": "^12.0.1",
+    "twitter": "^1.7.1"
   }
 }
