--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "javascript-time-ago": "^2.0.1",
     "next": "^8.0.4",
     "nodemon": "^1.18.10",
     "react": "^16.8.6",
